--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,7 @@ section ul li:hover {
         font-size: 0; 
     }
     section {
+        //display: none;
         color: white;
         background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
         padding-top: 3px;
@@ -140,17 +141,17 @@ section ul li:hover {
     
     section h2 {
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 18px;
+        font-size: 10px;
         letter-spacing: -0.18px;
         color: #AAAAAA;;
-        margin-left:10px;
+        margin-left:4px;
         margin-top: 2px;
-        margin-bottom: 2px;
+        margin-bottom: -16px;
     }
     
     section p {
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 10px;
+        font-size: 8px;
         letter-spacing: -0.18px;
         color: #A1A1AA;
         justify-content: right;
@@ -159,12 +160,17 @@ section ul li:hover {
     
     section ul {
         display: flex;
-        gap: 36px;
-        margin-bottom: 2px;
+        gap: 18px;
+        margin-bottom: -16px;
         list-style: none;
     }
     
     section ul li:hover {
         transform: scale(1.2);
+    }
+
+    svg {
+        width: 16px; 
+        height: 16px;
     }
 }
